# atsamd

./: README.md
boards/arduino_mkr1000/: Cargo.toml
boards/arduino_mkrvidor4000/: Cargo.toml
boards/arduino_mkrzero/: Cargo.toml
boards/arduino_nano33iot/: Cargo.toml
boards/circuit_playground_express/: Cargo.toml
boards/edgebadge/: .gdbinit  Cargo.toml
boards/edgebadge/examples/: magic_wand.rs  qspi_dump.rs
boards/edgebadge/src/: pins.rs
boards/feather_m0/: Cargo.toml
boards/feather_m4/: Cargo.toml
boards/gemma_m0/: Cargo.toml
boards/grand_central_m4/: Cargo.toml
boards/itsybitsy_m0/: Cargo.toml
boards/itsybitsy_m4/: Cargo.toml
boards/metro_m0/: Cargo.toml
boards/metro_m4/: Cargo.toml
boards/pfza_proto1/: Cargo.toml
boards/pygamer/: .gitignore  Cargo.toml  README.md
boards/pygamer/.cargo/: config
boards/pygamer/examples/: blinky_basic.rs  button_rtfm.rs  clock_out.rs  ferris_img.rs  game_of_life.rs  gpio_interrupt.rs  life.rs  magic_wand.rs  magic_wand_rtic.rs  mandelbrot.rs  neopixel_adc_battery.rs  neopixel_adc_light.rs  (+16 more)
boards/pyportal/: Cargo.toml
boards/samd11_bare/: Cargo.toml  README.md
boards/samd21_mini/: Cargo.toml
boards/serpente/: Cargo.toml
boards/sodaq_one/: Cargo.toml
boards/sodaq_sara_aff/: Cargo.toml
boards/thing-plus/: Cargo.toml  README.md  memory.x  new.sal  old.sal
boards/thing-plus/examples/: blinky_basic.rs  ferris_img.rs
boards/thing-plus/src/: lib.rs  pins.rs
boards/trellis_m4/: Cargo.toml
boards/trinket_m0/: Cargo.toml
boards/wio_lite_mg126/: Cargo.toml
boards/xiao_m0/: Cargo.toml
(+7 files in other folders)
