[package]
name = "thing-plus"
version = "0.7.0"
authors = ["Jacob Rosenthal <jacobrosenthal@gmail.com>"]
description = "Board Support crate for the Sparkfun Thing Plus"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
edition = "2018"
exclude = ["assets"]

# for cargo flash
[package.metadata]
chip = "ATSAMD51J19A"

[dependencies]
cortex-m = "0.6"
embedded-hal = "0.2.3"
st7735-lcd = "0.7"

[dependencies.cortex-m-rt]
version = "0.6.12"
optional = true

[dependencies.atsamd-hal]
path = "../../hal"
version = "0.12"
default-features = false

[dev-dependencies]
panic-halt = "0.2"
embedded-graphics = "0.6.0"
cortex-m-rtic = "0.5.1"

[features]
# ask the HAL to enable atsamd51j support
default = [
    "rt",
    "atsamd-hal/samd51j",
    "atsamd-hal/samd51",
    "unproven",
    "panic_led"
]
rt = ["cortex-m-rt", "atsamd-hal/samd51j-rt"]
unproven = ["atsamd-hal/unproven"]
panic_led = []

[profile.dev]
# opt-level = 2 # uncomment for neopixel functionality during debug
incremental = false
debug = true
lto = "thin" # thin for debug speed

[profile.release]
lto = "fat"
opt-level = 's'
